created endpoints for get and create + tests
